Overflow issue fix and removed voice capture from Welcome

--- a/src/css/_global/_containers.scss
+++ b/src/css/_global/_containers.scss
@@ -8,7 +8,7 @@
 .xs, .sm, .md, .lg, .xl {
   width: 100%;
   margin: 0 auto;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 
