--- a/src/css/main.css
+++ b/src/css/main.css
@@ -313,7 +313,7 @@ form .button-box {
 .xs, .sm, .md, .lg, .xl {
   width: 100%;
   margin: 0 auto;
-  overflow-x: hidden; }
+  overflow: hidden; }
 
 main {
   display: flex;
